--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ ADMIN_EMAILS=admin@ori369.com
 
 # Site URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Stripe Configuration
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+STRIPE_SECRET_KEY=your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
