--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:db": "node test-supabase.js",
     "test:flow": "node test-full-flow.js",
     "setup:db": "node setup-database.js",
+    "setup:cms": "node setup-cms.js",
     "set-admin": "node set-admin.js",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
@@ -20,6 +21,7 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@stripe/stripe-js": "^8.4.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.75.0",
     "date-fns": "^4.1.0",
@@ -32,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "stripe": "^19.3.1",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
