Checkout/cart improvements, Stripe booking linkage, orders constraint fixes, calendar creds detection, media page

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,20 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url-here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# Google Calendar API (for admin)
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
+# Google Calendar API (Service Account - recommended)
+# Option 1: Place the service account JSON file at project root as: google-calendar-credentials.json
+# Option 2: Set GOOGLE_SERVICE_ACCOUNT_KEY as base64 encoded JSON or plain JSON string
+# Make sure to share your Google Calendar with the service account email: ori369-koledar@ori369-calendar.iam.gserviceaccount.com
+GOOGLE_CALENDAR_ID=primary
+GOOGLE_SERVICE_ACCOUNT_KEY=
+
+# Google Places API (for fetching reviews)
+GOOGLE_PLACES_API_KEY=your-google-places-api-key
 
 # Admin emails (comma-separated)
-ADMIN_EMAILS=admin@ori369.com
+ADMIN_EMAILS=admin@ori369.com,jernej.babij@gmail.com
 
 # Site URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
