--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "googleapis": "^162.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
